testsuite/tests/linear/should_fail/LinearSeq.hs
{-# LANGUAGE LinearTypes #-}

module LinearSeq where

bad :: a ->. ()
bad x = seq x ()
